--- a/lib/MoMA/Reports/submit.xml
+++ b/lib/MoMA/Reports/submit.xml
@@ -3,7 +3,7 @@
   <metadata>
     <definitions>Mono 2.6</definitions>
     <momaversion>2.0.0.0</momaversion>
-    <date>2011-06-07 07:49:32Z</date>
+    <date>2011-06-12 18:32:02Z</date>
     <name />
     <email />
     <homepage />
@@ -48,6 +48,15 @@
         <raw>System.Void System.Threading.ReaderWriterLockSlim::.ctor(System.Threading.LockRecursionPolicy)</raw>
       </issue>
     </assembly>
+    <assembly name="Castle.Windsor.dll" version="2.5.1.0" runtime="2.0" todo="1" niex="0" miss="0" pinv="0">
+      <issue type="todo">
+        <class>RemotingFacility</class>
+        <caller>void SetUpRemotingConfiguration()</caller>
+        <method>void Configure(string, bool)</method>
+        <raw>System.Void System.Runtime.Remoting.RemotingConfiguration::Configure(System.String,System.Boolean)</raw>
+        <data>Implement ensureSecurity</data>
+      </issue>
+    </assembly>
     <assembly name="FluentNHibernate.dll" version="1.2.0.712" runtime="2.0" todo="2" niex="1" miss="0" pinv="0">
       <issue type="todo">
         <class>PersistenceModel</class>
@@ -71,8 +80,8 @@
       </issue>
     </assembly>
     <assembly name="Iesi.Collections.dll" version="1.0.1.0" runtime="2.0" todo="0" niex="0" miss="0" pinv="0" />
-    <assembly name="Monastry.ActiveRecord.dll" version="4.0.0.10" runtime="2.0" todo="0" niex="0" miss="0" pinv="0" />
-    <assembly name="Monastry.ActiveRecord.NHibernate.dll" version="4.0.0.10" runtime="2.0" todo="0" niex="0" miss="0" pinv="0" />
+    <assembly name="Monastry.ActiveRecord.dll" version="4.0.0.11" runtime="2.0" todo="0" niex="0" miss="0" pinv="0" />
+    <assembly name="Monastry.ActiveRecord.NHibernate.dll" version="4.0.0.11" runtime="2.0" todo="0" niex="0" miss="0" pinv="0" />
     <assembly name="NHibernate.ByteCode.Castle.dll" version="3.1.0.4000" runtime="2.0" todo="0" niex="0" miss="0" pinv="0" />
     <assembly name="NHibernate.dll" version="3.1.0.4000" runtime="2.0" todo="7" niex="16" miss="0" pinv="0">
       <issue type="todo">
